--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Produção</title>
+    <title>Controle de Produção de OP</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+        }
+        h1 {
+            color: #333;
         }
         .input-group {
             margin-bottom: 10px;
@@ -17,7 +20,8 @@
             margin-bottom: 5px;
         }
         input[type="number"],
-        input[type="text"] {
+        input[type="text"],
+        select {
             width: 100%;
             padding: 8px;
             margin-bottom: 10px;
@@ -29,17 +33,25 @@
             border: none;
             cursor: pointer;
             margin-right: 5px;
+            margin-top: 10px;
         }
         .machine-btn {
-            width: 232px;
-            height: 72px;
-            margin-bottom: 20px;
-            font-size: 20px;
+            width: 150px;
+            height: 50px;
+            margin-bottom: 10px;
+            font-size: 16px;
         }
-        #btn-cl01 { background-color: #FF5733; }
-        #btn-cl02 { background-color: #33C1FF; }
-        #btn-cl03 { background-color: #33FF57; }
-        #btn-cl04 { background-color: #FFC300; }
+        .machine-buttons {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .active {
+            background-color: red;
+        }
+        .inactive {
+            background-color: green;
+        }
         .calc-btn {
             background-color: #4CAF50;
         }
@@ -63,137 +75,131 @@
         th {
             background-color: #f2f2f2;
         }
+        h2 {
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
     <h1>Controle de Produção</h1>
 
+    <div class="machine-buttons">
+        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">Máquina 1</button>
+        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">Máquina 2</button>
+        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">Máquina 3</button>
+        <!-- Adicione mais botões de máquina se necessário -->
+    </div>
+
     <form id="productionForm">
-        <label for="machine">Nome da Máquina:</label>
-        <input type="text" id="machine" required><br>
-
-        <label for="opNumber">Número da OP:</label>
-        <input type="text" id="opNumber" required><br>
-
-        <label for="componentCode">Código do Componente:</label>
-        <input type="text" id="componentCode" required><br>
-
-        <label for="opQuantity">Quantidade da OP:</label>
-        <input type="number" id="opQuantity" required><br>
-
-        <label for="opLength">Comprimento da OP (cm):</label>
-        <input type="number" id="opLength" required><br>
-
-        <label for="fabricType">Tipo de Tecido:</label>
-        <select id="fabricType" required>
-            <option value="">Selecione</option>
-            <option value="Plano">Plano</option>
-            <option value="Tubular">Tubular</option>
-            <option value="PET">PET</option>
-        </select><br>
-
-        <label for="opWeight">Gramatura da OP (g/m²):</label>
-        <input type="number" id="opWeight" required><br>
-
-        <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
-        <input type="number" id="piecesRemoved" required><br>
-
-        <button type="button" onclick="addRecord()">Adicionar Registro</button>
-        <button type="button" onclick="calculateResults()">Calcular Resultados</button>
+        <div class="input-group">
+            <label for="opNumber">Número da OP:</label>
+            <input type="text" id="opNumber" maxlength="13" oninput="formatOPNumber(this)" required>
+        </div>
+        <div class="input-group">
+            <label for="componentCode">Código do Componente:</label>
+            <input type="text" id="componentCode" required>
+        </div>
+        <div class="input-group">
+            <label for="opQuantity">Quantidade da OP:</label>
+            <input type="number" id="opQuantity" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="opLength">Comprimento da OP (cm):</label>
+            <input type="number" id="opLength" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="fabricType">Tipo de Tecido:</label>
+            <select id="fabricType" required>
+                <option value="">Selecione</option>
+                <option value="Plano">Plano</option>
+                <option value="Tubular">Tubular</option>
+                <option value="PET">PET</option>
+            </select>
+        </div>
+        <div class="input-group">
+            <label for="opWeight">Gramatura da OP:</label>
+            <input type="number" id="opWeight" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+            <input type="number" id="piecesRemoved" min="0" required>
+        </div>
+        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
 
     <h2>Resultados:</h2>
     <p id="cutsResult">Número de Cortes: </p>
     <p id="turnsResult">Número de Voltas: </p>
     <p id="cutAmountResult">Quantidade Cortada: </p>
+    <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
+    <p id="cyclesResult">Número de Ciclos: </p>
 
-    <h2>Registros de Produção</h2>
-    <table border="1">
+    <table id="recordsTable">
         <thead>
             <tr>
                 <th>Data e Hora</th>
-                <th>Nome da Máquina</th>
+                <th>Máquinas Ativas</th>
                 <th>Número da OP</th>
                 <th>Código do Componente</th>
                 <th>Quantidade da OP</th>
-                <th>Comprimento da OP (m)</th>
+                <th>Comprimento da OP</th>
                 <th>Tipo de Tecido</th>
-                <th>Gramatura da OP (g/m²)</th>
+                <th>Gramatura da OP</th>
                 <th>Quantidade de Peças Retiradas</th>
             </tr>
         </thead>
-        <tbody id="productionTable">
-        </tbody>
+        <tbody></tbody>
     </table>
 
-    <button type="button" onclick="downloadCSV()">Baixar CSV</button>
+    <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
         let records = [];
 
-        function addRecord() {
-            const date = new Date().toLocaleString();
-            const machine = document.getElementById('machine').value;
+        function toggleMachine(machineNumber) {
+            const button = document.getElementById(`machine${machineNumber}`);
+            if (button.classList.contains('inactive')) {
+                button.classList.remove('inactive');
+                button.classList.add('active');
+            } else {
+                button.classList.remove('active');
+                button.classList.add('inactive');
+            }
+        }
+
+        function getActiveMachinesCount() {
+            let count = 0;
+            const machineButtons = document.getElementsByClassName('machine-btn');
+            for (let button of machineButtons) {
+                if (button.classList.contains('active')) {
+                    count++;
+                }
+            }
+            return count;
+        }
+
+        function formatOPNumber(input) {
+            let value = input.value.replace(/\D/g, '');
+            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
+            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
+            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
+            input.value = value;
+        }
+
+        function calculateAndSave() {
             const opNumber = document.getElementById('opNumber').value;
             const componentCode = document.getElementById('componentCode').value;
-            const opQuantity = document.getElementById('opQuantity').value;
-            const opLength = document.getElementById('opLength').value;
-            const fabricType = document.getElementById('fabricType').value;
-            const opWeight = document.getElementById('opWeight').value;
-            const piecesRemoved = document.getElementById('piecesRemoved').value;
-
-            const record = {
-                date,
-                machine,
-                opNumber,
-                componentCode,
-                opQuantity,
-                opLength,
-                fabricType,
-                opWeight,
-                piecesRemoved
-            };
-
-            records.push(record);
-            updateTable();
-        }
-
-        function updateTable() {
-            const productionTable = document.getElementById('productionTable');
-            productionTable.innerHTML = '';
-            records.forEach(record => {
-                const row = document.createElement('tr');
-                for (const key in record) {
-                    const cell = document.createElement('td');
-                    cell.textContent = record[key];
-                    row.appendChild(cell);
-                }
-                productionTable.appendChild(row);
-            });
-            localStorage.setItem('productionRecords', JSON.stringify(records));
-        }
-
-        function downloadCSV() {
-            let csvContent = "data:text/csv;charset=utf-8,";
-            csvContent += "Data e Hora,Nome da Máquina,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
-
-            records.forEach(record => {
-                csvContent += `${record.date},${record.machine},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}\n`;
-            });
-
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
-            link.setAttribute("download", "production_records.csv");
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        }
-
-        function calculateResults() {
+            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+            const opLength = parseFloat(document.getElementById('opLength').value);
             const fabricType = document.getElementById('fabricType').value;
             const opWeight = parseFloat(document.getElementById('opWeight').value);
-            const opLength = parseFloat(document.getElementById('opLength').value);
+            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+
+            if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
+                alert('Por favor, preencha todos os campos corretamente.');
+                return;
+            }
+
             const maxCarouselLength = 540;
 
             // Cálculo do Número de Cortes
@@ -202,6 +208,7 @@
 
             // Cálculo do Número de Voltas
             let numTurns = 0;
+
             if (fabricType === 'Plano') {
                 numTurns = calculateTurnsPlano(opWeight);
             } else if (fabricType === 'Tubular') {
@@ -215,6 +222,42 @@
             // Cálculo da Quantidade Cortada
             const cutAmount = numCuts * numTurns;
             document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+
+            // Cálculo da Quantidade Total Cortada
+            const activeMachines = getActiveMachinesCount();
+            const totalCutAmount = cutAmount * activeMachines;
+            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+
+            // Cálculo do Número de Ciclos
+            const numCycles = opQuantity / cutAmount;
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+
+            const date = new Date().toLocaleString("pt-BR", { timeZone: "America/Sao_Paulo" }).replace(",", " ");
+            const activeMachinesList = getActiveMachinesList();
+
+            records.push({
+                date,
+                activeMachines: activeMachinesList.join(', '),
+                opNumber,
+                componentCode,
+                opQuantity,
+                opLength,
+                fabricType,
+                opWeight,
+                piecesRemoved
+            });
+
+            saveRecords();
+            updateTable();
+
+            // Limpar os campos do formulário
+            document.getElementById('productionForm').reset();
+            document.getElementById('opWeight').disabled = false;
+            document.getElementById('cutsResult').textContent = 'Número de Cortes: ';
+            document.getElementById('turnsResult').textContent = 'Número de Voltas: ';
+            document.getElementById('cutAmountResult').textContent = 'Quantidade Cortada: ';
+            document.getElementById('totalCutAmountResult').textContent = 'Quantidade Total Cortada: ';
+            document.getElementById('cyclesResult').textContent = 'Número de Ciclos: ';
         }
 
         function calculateTurnsPlano(weight) {
@@ -239,6 +282,39 @@
             }
         }
 
+        function getActiveMachinesList() {
+            const machines = [];
+            const machineButtons = document.getElementsByClassName('machine-btn');
+            for (let button of machineButtons) {
+                if (button.classList.contains('active')) {
+                    machines.push(button.textContent);
+                }
+            }
+            return machines;
+        }
+
+        function updateTable() {
+            const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
+            tableBody.innerHTML = "";
+
+            records.forEach(record => {
+                const row = tableBody.insertRow();
+                row.insertCell(0).textContent = record.date;
+                row.insertCell(1).textContent = record.activeMachines;
+                row.insertCell(2).textContent = record.opNumber;
+                row.insertCell(3).textContent = record.componentCode;
+                row.insertCell(4).textContent = record.opQuantity;
+                row.insertCell(5).textContent = record.opLength;
+                row.insertCell(6).textContent = record.fabricType;
+                row.insertCell(7).textContent = record.opWeight;
+                row.insertCell(8).textContent = record.piecesRemoved;
+            });
+        }
+
+        function saveRecords() {
+            localStorage.setItem('productionRecords', JSON.stringify(records));
+        }
+
         function loadRecords() {
             const savedRecords = localStorage.getItem('productionRecords');
             if (savedRecords) {
@@ -247,7 +323,47 @@
             }
         }
 
-        window.onload = loadRecords;
+        function downloadCSV() {
+            let csvContent = "data:text/csv;charset=utf-8,";
+            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+
+            records.forEach(record => {
+                csvContent += `${record.date},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}\n`;
+            });
+
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", "production_records.csv");
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+
+        function init() {
+            loadRecords();
+        }
+
+        document.getElementById('fabricType').addEventListener('change', function() {
+            const selectedFabric = this.value;
+            const opWeight = document.getElementById('opWeight');
+            if (selectedFabric === 'Plano') {
+                opWeight.disabled = false;
+                opWeight.min = 65;
+                opWeight.max = 120;
+                opWeight.value = ''; // Limpar o valor anterior
+            } else if (selectedFabric === 'Tubular') {
+                opWeight.disabled = false;
+                opWeight.min = 65;
+                opWeight.max = 82;
+                opWeight.value = ''; // Limpar o valor anterior
+            } else if (selectedFabric === 'PET') {
+                opWeight.value = 170;
+                opWeight.disabled = true;
+            }
+        });
+
+        window.onload = init;
     </script>
 </body>
 </html>
