--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Produção de OP</title>
+    <title>Controle de Produção</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,119 +12,78 @@
         h1 {
             color: #333;
         }
-        .input-group {
-            margin-bottom: 10px;
+        form {
+            margin-bottom: 20px;
         }
         label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="number"],
-        input[type="text"],
-        select {
-            width: 100%;
-            padding: 8px;
+            display: inline-block;
+            width: 150px;
             margin-bottom: 10px;
-            box-sizing: border-box;
+        }
+        select, input {
+            padding: 5px;
+            margin-bottom: 10px;
         }
         button {
-            padding: 10px 20px;
+            background-color: green;
             color: white;
+            padding: 10px;
             border: none;
             cursor: pointer;
-            margin-right: 5px;
-            margin-top: 10px;
-        }
-        .machine-btn {
-            width: 150px;
-            height: 50px;
-            margin-bottom: 10px;
             font-size: 16px;
+        }
+        button:hover {
+            background-color: darkgreen;
+        }
+        h2 {
+            margin-top: 20px;
+            color: #555;
+        }
+        p {
+            font-size: 18px;
         }
         .machine-buttons {
             display: flex;
             gap: 10px;
-            margin-bottom: 20px;
         }
-        .active {
+        .machine-buttons button {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+        }
+        .machine-buttons button.active {
             background-color: red;
         }
-        .inactive {
+        .machine-buttons button.inactive {
             background-color: green;
-        }
-        .calc-btn {
-            background-color: #4CAF50;
-        }
-        .calc-btn:hover {
-            background-color: #45a049;
-        }
-        .result {
-            margin-top: 20px;
-            font-weight: bold;
-        }
-        table {
-            margin-top: 20px;
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        h2 {
-            margin-top: 30px;
         }
     </style>
 </head>
 <body>
     <h1>Controle de Produção</h1>
 
-    <div class="machine-buttons">
-        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">Máquina 1</button>
-        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">Máquina 2</button>
-        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">Máquina 3</button>
-        <!-- Adicione mais botões de máquina se necessário -->
-    </div>
-
     <form id="productionForm">
-        <div class="input-group">
-            <label for="opNumber">Número da OP:</label>
-            <input type="text" id="opNumber" maxlength="13" oninput="formatOPNumber(this)" required>
-        </div>
-        <div class="input-group">
-            <label for="componentCode">Código do Componente:</label>
-            <input type="text" id="componentCode" required>
-        </div>
-        <div class="input-group">
-            <label for="opQuantity">Quantidade da OP:</label>
-            <input type="number" id="opQuantity" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="opLength">Comprimento da OP (cm):</label>
-            <input type="number" id="opLength" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="fabricType">Tipo de Tecido:</label>
-            <select id="fabricType" required>
-                <option value="">Selecione</option>
-                <option value="Plano">Plano</option>
-                <option value="Tubular">Tubular</option>
-                <option value="PET">PET</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="opWeight">Gramatura da OP:</label>
-            <input type="number" id="opWeight" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
-            <input type="number" id="piecesRemoved" min="0" required>
-        </div>
-        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
+        <label for="fabricType">Tipo de Tecido:</label>
+        <select id="fabricType" required>
+            <option value="">Selecione</option>
+            <option value="Plano">Plano</option>
+            <option value="Tubular">Tubular</option>
+            <option value="PET">PET</option>
+        </select><br>
+
+        <label for="opWeight">Gramatura da OP:</label>
+        <input type="number" id="opWeight" required><br>
+
+        <label for="opLength">Comprimento da OP:</label>
+        <input type="number" id="opLength" required><br>
+
+        <label for="opQuantity">Quantidade da OP:</label>
+        <input type="number" id="opQuantity" required><br>
+
+        <button type="button" onclick="calculateResults()">Calcular Resultados</button>
     </form>
 
     <h2>Resultados:</h2>
@@ -132,132 +91,81 @@
     <p id="turnsResult">Número de Voltas: </p>
     <p id="cutAmountResult">Quantidade Cortada: </p>
     <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
-    <p id="cyclesResult">Número de Ciclos: </p>
+    <p id="cycleNumberResult">Número de Ciclos: </p>
 
-    <table id="recordsTable">
-        <thead>
-            <tr>
-                <th>Data e Hora</th>
-                <th>Máquinas Ativas</th>
-                <th>Número da OP</th>
-                <th>Código do Componente</th>
-                <th>Quantidade da OP</th>
-                <th>Comprimento da OP</th>
-                <th>Tipo de Tecido</th>
-                <th>Gramatura da OP</th>
-                <th>Quantidade de Peças Retiradas</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <button onclick="downloadCSV()">Download CSV</button>
+    <h2>Máquinas</h2>
+    <div class="machine-buttons">
+        <button id="machine1" class="inactive" onclick="toggleMachine(1)">Máquina 1</button>
+        <button id="machine2" class="inactive" onclick="toggleMachine(2)">Máquina 2</button>
+        <button id="machine3" class="inactive" onclick="toggleMachine(3)">Máquina 3</button>
+    </div>
 
     <script>
-        let records = [];
+        const fabricType = document.getElementById('fabricType');
+        const opWeight = document.getElementById('opWeight');
+        const opLength = document.getElementById('opLength');
+        const opQuantity = document.getElementById('opQuantity');
+        const cutsResult = document.getElementById('cutsResult');
+        const turnsResult = document.getElementById('turnsResult');
+        const cutAmountResult = document.getElementById('cutAmountResult');
+        const totalCutAmountResult = document.getElementById('totalCutAmountResult');
+        const cycleNumberResult = document.getElementById('cycleNumberResult');
 
-        function toggleMachine(machineNumber) {
-            const button = document.getElementById(`machine${machineNumber}`);
-            if (button.classList.contains('inactive')) {
-                button.classList.remove('inactive');
-                button.classList.add('active');
-            } else {
-                button.classList.remove('active');
-                button.classList.add('inactive');
+        let activeMachines = 0;
+
+        fabricType.addEventListener('change', function() {
+            const selectedFabric = fabricType.value;
+            if (selectedFabric === 'Plano') {
+                opWeight.disabled = false;
+                opWeight.min = 65;
+                opWeight.max = 120;
+                opWeight.value = ''; // Limpar o valor anterior
+            } else if (selectedFabric === 'Tubular') {
+                opWeight.disabled = false;
+                opWeight.min = 65;
+                opWeight.max = 82;
+                opWeight.value = ''; // Limpar o valor anterior
+            } else if (selectedFabric === 'PET') {
+                opWeight.value = 170;
+                opWeight.disabled = true;
             }
-        }
+        });
 
-        function getActiveMachinesCount() {
-            let count = 0;
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    count++;
-                }
-            }
-            return count;
-        }
-
-        function formatOPNumber(input) {
-            let value = input.value.replace(/\D/g, '');
-            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
-            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
-            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
-            input.value = value;
-        }
-
-        function calculateAndSave() {
-            const opNumber = document.getElementById('opNumber').value;
-            const componentCode = document.getElementById('componentCode').value;
-            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
-            const opLength = parseFloat(document.getElementById('opLength').value);
-            const fabricType = document.getElementById('fabricType').value;
-            const opWeight = parseFloat(document.getElementById('opWeight').value);
-            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
-
-            if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
-                alert('Por favor, preencha todos os campos corretamente.');
-                return;
-            }
-
+        function calculateResults() {
+            const fabric = fabricType.value;
+            const weight = parseFloat(opWeight.value);
+            const length = parseFloat(opLength.value);
+            const quantity = parseFloat(opQuantity.value);
             const maxCarouselLength = 540;
 
             // Cálculo do Número de Cortes
-            const numCuts = Math.floor(maxCarouselLength / opLength);
-            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
+            const numCuts = Math.floor(maxCarouselLength / length);
+            cutsResult.textContent = `Número de Cortes: ${numCuts}`;
 
             // Cálculo do Número de Voltas
             let numTurns = 0;
 
-            if (fabricType === 'Plano') {
-                numTurns = calculateTurnsPlano(opWeight);
-            } else if (fabricType === 'Tubular') {
-                numTurns = calculateTurnsTubular(opWeight);
-            } else if (fabricType === 'PET') {
+            if (fabric === 'Plano') {
+                numTurns = calculateTurnsPlano(weight);
+            } else if (fabric === 'Tubular') {
+                numTurns = calculateTurnsTubular(weight);
+            } else if (fabric === 'PET') {
                 numTurns = 25; // Valor fixo para PET
             }
 
-            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+            turnsResult.textContent = `Número de Voltas: ${numTurns}`;
 
             // Cálculo da Quantidade Cortada
             const cutAmount = numCuts * numTurns;
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+            cutAmountResult.textContent = `Quantidade Cortada: ${cutAmount}`;
 
-            // Cálculo da Quantidade Total Cortada
-            const activeMachines = getActiveMachinesCount();
+            // Cálculo da Quantidade Total Cortada (Multiplicação pelo número de máquinas ativas)
             const totalCutAmount = cutAmount * activeMachines;
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+            totalCutAmountResult.textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
-            // Cálculo do Número de Ciclos
-            const numCycles = opQuantity / cutAmount;
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
-
-            const date = new Date().toLocaleString("pt-BR", { timeZone: "America/Sao_Paulo" }).replace(",", " ");
-            const activeMachinesList = getActiveMachinesList();
-
-            records.push({
-                date,
-                activeMachines: activeMachinesList.join(', '),
-                opNumber,
-                componentCode,
-                opQuantity,
-                opLength,
-                fabricType,
-                opWeight,
-                piecesRemoved
-            });
-
-            saveRecords();
-            updateTable();
-
-            // Limpar os campos do formulário
-            document.getElementById('productionForm').reset();
-            document.getElementById('opWeight').disabled = false;
-            document.getElementById('cutsResult').textContent = 'Número de Cortes: ';
-            document.getElementById('turnsResult').textContent = 'Número de Voltas: ';
-            document.getElementById('cutAmountResult').textContent = 'Quantidade Cortada: ';
-            document.getElementById('totalCutAmountResult').textContent = 'Quantidade Total Cortada: ';
-            document.getElementById('cyclesResult').textContent = 'Número de Ciclos: ';
+            // Cálculo do Número de Ciclos (Quantidade da OP dividido pela Quantidade Cortada)
+            const cycleNumber = quantity / cutAmount;
+            cycleNumberResult.textContent = `Número de Ciclos: ${cycleNumber.toFixed(2)}`;
         }
 
         function calculateTurnsPlano(weight) {
@@ -282,88 +190,19 @@
             }
         }
 
-        function getActiveMachinesList() {
-            const machines = [];
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    machines.push(button.textContent);
-                }
-            }
-            return machines;
-        }
-
-        function updateTable() {
-            const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
-            tableBody.innerHTML = "";
-
-            records.forEach(record => {
-                const row = tableBody.insertRow();
-                row.insertCell(0).textContent = record.date;
-                row.insertCell(1).textContent = record.activeMachines;
-                row.insertCell(2).textContent = record.opNumber;
-                row.insertCell(3).textContent = record.componentCode;
-                row.insertCell(4).textContent = record.opQuantity;
-                row.insertCell(5).textContent = record.opLength;
-                row.insertCell(6).textContent = record.fabricType;
-                row.insertCell(7).textContent = record.opWeight;
-                row.insertCell(8).textContent = record.piecesRemoved;
-            });
-        }
-
-        function saveRecords() {
-            localStorage.setItem('productionRecords', JSON.stringify(records));
-        }
-
-        function loadRecords() {
-            const savedRecords = localStorage.getItem('productionRecords');
-            if (savedRecords) {
-                records = JSON.parse(savedRecords);
-                updateTable();
+        // Função para alternar a cor e o estado do botão de cada máquina e contar máquinas ativas
+        function toggleMachine(machineNumber) {
+            const button = document.getElementById(`machine${machineNumber}`);
+            if (button.classList.contains('inactive')) {
+                button.classList.remove('inactive');
+                button.classList.add('active');
+                activeMachines++;
+            } else {
+                button.classList.remove('active');
+                button.classList.add('inactive');
+                activeMachines--;
             }
         }
-
-        function downloadCSV() {
-            let csvContent = "data:text/csv;charset=utf-8,";
-            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
-
-            records.forEach(record => {
-                csvContent += `${record.date},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}\n`;
-            });
-
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
-            link.setAttribute("download", "production_records.csv");
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        }
-
-        function init() {
-            loadRecords();
-        }
-
-        document.getElementById('fabricType').addEventListener('change', function() {
-            const selectedFabric = this.value;
-            const opWeight = document.getElementById('opWeight');
-            if (selectedFabric === 'Plano') {
-                opWeight.disabled = false;
-                opWeight.min = 65;
-                opWeight.max = 120;
-                opWeight.value = ''; // Limpar o valor anterior
-            } else if (selectedFabric === 'Tubular') {
-                opWeight.disabled = false;
-                opWeight.min = 65;
-                opWeight.max = 82;
-                opWeight.value = ''; // Limpar o valor anterior
-            } else if (selectedFabric === 'PET') {
-                opWeight.value = 170;
-                opWeight.disabled = true;
-            }
-        });
-
-        window.onload = init;
     </script>
 </body>
 </html>
